# meltano-file-parser

./: README.md  meltano.yml  parse.py  print_schemas.py  pyproject.toml
models/: base.py  command.py  discovery.py  plugin.py  project.py  setting.py
